--- a/TradePulse/TradePulse.Server/TradePulse.Server.csproj
+++ b/TradePulse/TradePulse.Server/TradePulse.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="3.3.1" />
     <PackageReference Include="Blazorise" Version="1.7.6" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.7.6" />
     <PackageReference Include="Blazorise.Charts" Version="1.7.6" />
